--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,9 @@ cover/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+.chorma_db/
+.chorma_test_db/
+.cpg_vector_db/
 
 # Flask stuff:
 instance/
